Add Property Account Drop for Icon Account

--- a/index.html
+++ b/index.html
@@ -41,6 +41,40 @@
                                 <a href="#" class="button-account">
                                     <i class="far fa-user"></i>
                                 </a>
+
+                                <div class="account-drop">
+                                    <div class="account-inner">
+                                        <div class="login-form-head">
+                                            <span class="login-form-title">Sign in</span>
+                                            <span class="pull-right">
+                                                <a href="#">Creat Account</a>
+                                            </span>
+                                        </div>
+                                        <form class="form">
+                                            <p>
+                                                <label for=>
+                                                    User name or email
+                                                    <span class="require">*</span> <br>
+                                                </label>    
+                                                <input type="text" name="username" required placeholder="Username"> 
+                                            </p>
+                                            <p>
+                                                <label for="password">
+                                                    Password 
+                                                    <span class="require">*</span><br>
+                                                </label>  
+                                                <input type="password" name="password" required placeholder="Pass word ">
+                                            </p>
+                                            <p>
+                                                <button class="btn-login">LOGIN</button>
+                                            </p>
+                                            <p>
+                                                Lost your password?
+                                            </p>
+                                        </form>
+                                    </div>
+
+                                </div>
                             </div>
                             <div class="site-header-wishlist">
                                 <a href="#" class="button-wish-list">
