--- a/components.html
+++ b/components.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style2.css">
 </head>
 <body>
+    <!--Components Banner -->
     <div class="banner">
         <div class="banner-1">
             <img src="./image/h8_banner1.jpg" alt="">
@@ -18,5 +19,7 @@
             <img src="./image/h8_banner3.jpg" alt="">
         </div>
     </div>
+
+    
 </body>
 </html>
