Add components Banner for index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEBSITE-LIKE</title>
     <script src="https://kit.fontawesome.com/53c7eb9ee6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style2.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -108,6 +109,17 @@
                 <div class="box-text">
                     <span class="text">Explore Products</span>
                 </div>
+            </div>
+        </div>
+        <div class="banner">
+            <div class="banner-1">
+                <img src="./image/h8_banner1.jpg" alt="">
+            </div>
+            <div class="banner-2">
+                <img src="./image/h8_banner2.jpg" alt="">
+            </div>
+            <div class="banner-3">
+                <img src="./image/h8_banner3.jpg" alt="">
             </div>
         </div>
     </container>
