Update components Product for index.html - Done Product

--- a/components.html
+++ b/components.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banner</title>
     <link rel="stylesheet" href="./style2.css">
+    <link rel="stylesheet" href="./style3.css">
 </head>
 <body>
     <!--Components Banner -->
@@ -20,6 +21,37 @@
         </div>
     </div>
 
-    
+    <!--Product-->
+    <div class="product">
+        <div class="product-1">
+            <div class="describe">
+                <div class="background-img img-1">
+                    <!-- <div class="show-menu-describe"> -->
+                    <div class="overlay">
+                        <table class="table">
+                            <tr class="data-1">
+                                <td>1</td>
+                                <td>2</td>
+                                <td>3</td>
+                            </tr>
+                        </table>
+                    </div>         
+                    <!-- </div> -->
+                </div>  
+            </div>
+            <p class="text-all text-center">
+                Food & Grocery
+            </p>
+            <p class="name-product text-center" >
+                Lively Green Half Naked
+            </p>
+            <p class="price text-center">
+                $146.92
+            </p>
+            <p class="text-center">
+                <button class="btn">Add To Cart</button>
+            </p>
+        </div>
+    </div>
 </body>
 </html>
