--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/53c7eb9ee6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style2.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style3.css">
 </head>
 <body>
     <header>
@@ -120,6 +121,157 @@
             </div>
             <div class="banner-3">
                 <img src="./image/h8_banner3.jpg" alt="">
+            </div>
+        </div>
+        <div class="feature-product">
+            <p class="text-1">see our latest</p>
+            <p class="text-2">Featured Products</p>
+        </div>
+        <div class="product">
+            <div class="product-1">
+                <div class="describe">
+                    <div class="background-img img-1">
+                        <!-- <div class="show-menu-describe"> -->
+                        <div class="overlay">
+                            <table class="table">
+                                <tr class="data-1">
+                                    <td>1</td>
+                                    <td>2</td>
+                                    <td>3</td>
+                                </tr>
+                            </table>
+                        </div>         
+                        <!-- </div> -->
+                    </div>  
+                </div>
+                <p class="text-all text-center">
+                    Food & Grocery
+                </p>
+                <p class="name-product text-center" >
+                    Lively Green Half Naked
+                </p>
+                <p class="price text-center">
+                    $146.92
+                </p>
+                <p class="text-center">
+                    <button class="btn">Add To Cart</button>
+                </p>
+            </div>
+            <div class="product-1">
+                <div class="describe">
+                    <div class="background-img img-2">
+                        <!-- <div class="show-menu-describe"> -->
+                        <div class="overlay">
+                            <table class="table">
+                                <tr class="data-1">
+                                    <td>1</td>
+                                    <td>2</td>
+                                    <td>3</td>
+                                </tr>
+                            </table>
+                        </div>         
+                        <!-- </div> -->
+                    </div>  
+                </div>
+                <p class="text-all text-center">
+                    Food & Grocery
+                </p>
+                <p class="name-product text-center" >
+                    Lively Green Half Naked
+                </p>
+                <p class="price text-center">
+                    $146.92
+                </p>
+                <p class="text-center">
+                    <button class="btn">Add To Cart</button>
+                </p>
+            </div>
+            <div class="product-1">
+                <div class="describe">
+                    <div class="background-img img-3">
+                        <!-- <div class="show-menu-describe"> -->
+                        <div class="overlay">
+                            <table class="table">
+                                <tr class="data-1">
+                                    <td>1</td>
+                                    <td>2</td>
+                                    <td>3</td>
+                                </tr>
+                            </table>
+                        </div>         
+                        <!-- </div> -->
+                    </div>  
+                </div>
+                <p class="text-all text-center">
+                    Food & Grocery
+                </p>
+                <p class="name-product text-center" >
+                    Lively Green Half Naked
+                </p>
+                <p class="price text-center">
+                    $146.92
+                </p>
+                <p class="text-center">
+                    <button class="btn">Add To Cart</button>
+                </p>
+            </div>
+            <div class="product-1">
+                <div class="describe">
+                    <div class="background-img img-4">
+                        <!-- <div class="show-menu-describe"> -->
+                        <div class="overlay">
+                            <table class="table">
+                                <tr class="data-1">
+                                    <td>1</td>
+                                    <td>2</td>
+                                    <td>3</td>
+                                </tr>
+                            </table>
+                        </div>         
+                        <!-- </div> -->
+                    </div>  
+                </div>
+                <p class="text-all text-center">
+                    Food & Grocery
+                </p>
+                <p class="name-product text-center" >
+                    Lively Green Half Naked
+                </p>
+                <p class="price text-center">
+                    $146.92
+                </p>
+                <p class="text-center">
+                    <button class="btn">Add To Cart</button>
+                </p>
+            </div>
+            <div class="product-1">
+                <div class="describe">
+                    <div class="background-img img-5">
+                        <!-- <div class="show-menu-describe"> -->
+                        <div class="overlay">
+                            <table class="table">
+                                <tr class="data-1">
+                                    <td>1</td>
+                                    <td>2</td>
+                                    <td>3</td>
+                                </tr>
+                            </table>
+                        </div>         
+                        <!-- </div> -->
+                    </div>  
+                </div>
+                <p class="text-all text-center">
+                    Food & Grocery
+                </p>
+                <p class="name-product text-center" >
+                    Lively Green Half Naked
+                </p>
+                <p class="price text-center">
+                    $146.92
+                </p>
+                <p class="text-center">
+                    <button class="btn">Add To Cart</button>
+                </p>
             </div>
         </div>
     </container>
