Add Components Background-2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./style3.css">
     <link rel="stylesheet" href="./style4.css">
+    <link rel="stylesheet" href="./style5.css">
 </head>
 <body>
     <header>
@@ -297,6 +298,39 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="background-2">
+            <div class="element-background-2">
+                <div class="wrapper">
+                    <div class="text">
+                        <div class="text-1">
+                            My choosee us
+                        </div>
+                        <div class="text-2">
+                            What makes us different
+                        </div>
+                    </div>
+                    <div class="grid">
+                        <div class="gird-1">
+                            <h2>01</h2>
+                            <h4>Cold-Pressed Juice</h4>
+                            <p>We start with whole fruits and vegetables and use a cold-press process to extract 
+                            every last drop of goodness – no heat keeps your nutrients intact.</p>
+                        </div>
+                        <div class="gird-2">
+                            <h2>01</h2>
+                            <h4>Cold-Pressed Juice</h4>
+                            <p>We start with whole fruits and vegetables and use a cold-press process to extract 
+                            every last drop of goodness – no heat keeps your nutrients intact.</p>
+                        </div>
+                        <div class="gird-3">
+                            <h2>01</h2>
+                            <h4>Cold-Pressed Juice</h4>
+                            <p>We start with whole fruits and vegetables and use a cold-press process to extract 
+                            every last drop of goodness – no heat keeps your nutrients intact.</p>
+                        </div>
+                    </div>
+                </div>
         </div>
     </container>
 </body>
