--- a/test.html
+++ b/test.html
@@ -20,19 +20,19 @@
                     </div>
                     <div class="grid">
                         <div class="gird-1">
-                            <h2>01</h2>
+                            <h2 class="title">01</h2>
                             <h4>Cold-Pressed Juice</h4>
                             <p>We start with whole fruits and vegetables and use a cold-press process to extract 
                             every last drop of goodness – no heat keeps your nutrients intact.</p>
                         </div>
                         <div class="gird-2">
-                            <h2>01</h2>
+                            <h2 class="title">01</h2>
                             <h4>Cold-Pressed Juice</h4>
                             <p>We start with whole fruits and vegetables and use a cold-press process to extract 
                             every last drop of goodness – no heat keeps your nutrients intact.</p>
                         </div>
                         <div class="gird-3">
-                            <h2>01</h2>
+                            <h2 class="title">01</h2>
                             <h4>Cold-Pressed Juice</h4>
                             <p>We start with whole fruits and vegetables and use a cold-press process to extract 
                             every last drop of goodness – no heat keeps your nutrients intact.</p>
