Add components product-count-down

--- a/test.html
+++ b/test.html
@@ -4,41 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BACKGROUND-2</title>
-    <link rel="stylesheet" href="./style5.css">
+    <link rel="stylesheet" href="./style6.css">
 </head> 
 <body>
-        <div class="background-2">
-            <div class="element-background-2">
-                <div class="wrapper">
-                    <div class="text">
-                        <div class="text-1">
-                            My choosee us
-                        </div>
-                        <div class="text-2">
-                            What makes us different
-                        </div>
-                    </div>
-                    <div class="grid">
-                        <div class="gird-1">
-                            <h2 class="title">01</h2>
-                            <h4>Cold-Pressed Juice</h4>
-                            <p>We start with whole fruits and vegetables and use a cold-press process to extract 
-                            every last drop of goodness – no heat keeps your nutrients intact.</p>
-                        </div>
-                        <div class="gird-2">
-                            <h2 class="title">01</h2>
-                            <h4>Cold-Pressed Juice</h4>
-                            <p>We start with whole fruits and vegetables and use a cold-press process to extract 
-                            every last drop of goodness – no heat keeps your nutrients intact.</p>
-                        </div>
-                        <div class="gird-3">
-                            <h2 class="title">01</h2>
-                            <h4>Cold-Pressed Juice</h4>
-                            <p>We start with whole fruits and vegetables and use a cold-press process to extract 
-                            every last drop of goodness – no heat keeps your nutrients intact.</p>
-                        </div>
-                    </div>
-                </div>
+    <div class="wrapper">
+        <div class="wrapper-right">
         </div>
+        <div class="wrapper-left">
+            <div class="text-1">
+                <p>deal of the day</p>
+            </div>
+            <div class="text-2">
+                <p>Mangp & Orange<br>Supersmoothie</p>
+            </div> 
+            <p class="price-new">$17.99 <span><del class="price-old">$35.99</del></span></p>
+            <p class="text-4">Fresh dela everyday. Get it<br>before time runs out!</p>
+            <div>
+                <button class="btn">
+                    Shop Now
+                </button>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
