Add components Product-Count-Down

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./style3.css">
     <link rel="stylesheet" href="./style4.css">
     <link rel="stylesheet" href="./style5.css">
+    <link rel="stylesheet" href="./style6.css">
 </head>
 <body>
     <header>
@@ -331,6 +332,26 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="wrapper-2">
+            <div class="wrapper-2-right">
+            </div>
+            <div class="wrapper-2-left">
+                <div class="text-1">
+                    <p>deal of the day</p>
+                </div>
+                <div class="text-2">
+                    <p>Mangp & Orange<br>Supersmoothie</p>
+                </div> 
+                <p class="price-new">$17.99 <span><del class="price-old">$35.99</del></span></p>
+                <p class="text-4">Fresh dela everyday. Get it<br>before time runs out!</p>
+                <div>
+                    <button class="btn-2">
+                        Shop Now
+                    </button>
+                </div>
+            </div>
         </div>
     </container>
 </body>
