Add Components Footer

--- a/test.html
+++ b/test.html
@@ -4,27 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BACKGROUND-2</title>
-    <link rel="stylesheet" href="./style6.css">
+    <link rel="stylesheet" href="./style7.css">
 </head> 
 <body>
-    <div class="wrapper">
-        <div class="wrapper-right">
+    <div class="footer margin-left">
+        <div class="ft-name">
+            <h2>Nguyen Nghia Hung</h1>
+            <p class="text-1">Location</p>
+            <p class="text-2">So 46 ngo 105 Doan Ke Thien, Ha Noi</p>
+            <p>Twiter-Facebook</p>
         </div>
-        <div class="wrapper-left">
-            <div class="text-1">
-                <p>deal of the day</p>
-            </div>
-            <div class="text-2">
-                <p>Mangp & Orange<br>Supersmoothie</p>
-            </div> 
-            <p class="price-new">$17.99 <span><del class="price-old">$35.99</del></span></p>
-            <p class="text-4">Fresh dela everyday. Get it<br>before time runs out!</p>
-            <div>
-                <button class="btn">
-                    Shop Now
-                </button>
+        <div class="ft-contact">
+            <div class="contact">
+                <p>Have a question? Give us a call or fill out the contact form. We’d love to hear from you</p>
+                <a href="#">Contact Us</a>
             </div>
         </div>
+        <div class="services">
+            <div class="account">
+                <p class="content text">Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+            </div>
+            <div class="account">
+                <p class="content text">Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+            </div>
+            <div class="account">
+                <p class="content text">Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-2 margin-left">
+        <p>Copyright © 2020 <strong>NNH</strong>. All Rights Reserved</p>
+        <ul class="banks">
+            <li>BIDV</li>
+            <li>ACB</li>
+        </ul>
     </div>
 </body>
 </html>
