Add components footer

--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 <body>
     <div class="footer margin-left">
         <div class="ft-name">
-            <h2>Nguyen Nghia Hung</h1>
+            <div><p>NguyenNghiaHung</p></div>
             <p class="text-1">Location</p>
             <p class="text-2">So 46 ngo 105 Doan Ke Thien, Ha Noi</p>
             <p>Twiter-Facebook</p>
