--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./style4.css">
     <link rel="stylesheet" href="./style5.css">
     <link rel="stylesheet" href="./style6.css">
+    <link rel="stylesheet" href="./style7.css">
 </head>
 <body>
     <header>
@@ -354,5 +355,51 @@
             </div>
         </div>
     </container>
+
+    <div class="footer margin-left">
+        <div class="ft-name">
+            <div><p class="autor">NguyenNghiaHung</p></div>
+            <p class="text-1">Location</p>
+            <p class="text-2">So 46 ngo 105 Doan Ke Thien, Ha Noi</p>
+            <p>Twiter-Facebook</p>
+        </div>
+        <div class="ft-contact">
+            <div class="contact">
+                <p>Have a question? Give us a call or fill out the contact form. We’d love to hear from you</p>
+                <a href="#">Contact Us</a>
+            </div>
+        </div>
+        <div class="services">
+            <div class="account">
+                <p class="content text">Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+            </div>
+            <div class="account">
+                <p class="content text">Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+            </div>
+            <div class="account">
+                <p class="content text">Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+                <p class="text">My Account</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer-2 margin-left">
+        <p>Copyright © 2020 <strong>NNH</strong>. All Rights Reserved</p>
+        <ul class="banks">
+            <li>BIDV</li>
+            <li>ACB</li>
+        </ul>
+    </div>
 </body>
 </html>
